--- a/src/main/resources/com/example/doric7/addNewChefScreen.fxml
+++ b/src/main/resources/com/example/doric7/addNewChefScreen.fxml
@@ -2,19 +2,21 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.doric7.controllers.searchControllers.DelivererScreenController">
+<?import javafx.scene.layout.*?>
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.example.doric7.controllers.addNewItemControllers.AddNewChefController"
+            prefHeight="400.0" prefWidth="600.0">
+
     <top>
         <MenuBar>
             <Menu text="Category">
                 <MenuItem text="Search" onAction="#onCategoryMenuClick"/>
-                <MenuItem text="Add new category" onAction="#onCategoryMenuClick"/>
+                <MenuItem text="Add new category" onAction="#onAddNewCategoryClick"/>
             </Menu>
             <Menu text="Ingredients">
                 <MenuItem text="Search" onAction="#onIngredientsMenuClick"/>
-                <MenuItem text="Add new ingredient" onAction="#onIngredientsMenuClick"/>
+                <MenuItem text="Add new ingredient" onAction="#onAddNewIngredientClick"/>
             </Menu>
             <Menu text="Meals">
                 <MenuItem text="Search" onAction="#onMealsMenuClick"/>
@@ -47,31 +49,24 @@
         </MenuBar>
     </top>
 
-    <center>
-        <VBox spacing="10.0" alignment="TOP_CENTER">
+    <left>
+        <GridPane hgap="10" vgap="10">
             <padding>
-                <Insets top="20.0" left="20.0" right="20.0" bottom="20.0"/>
+                <Insets top="20.0" left="10.0" right="20.0" bottom="20.0"/>
             </padding>
+            <columnConstraints>
+                <ColumnConstraints halignment="RIGHT"/>
+                <ColumnConstraints hgrow="ALWAYS"/>
+            </columnConstraints>
 
-            <Label text="Item search" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
-            <HBox alignment="CENTER_RIGHT" spacing="10">
-                <Label text="Enter item name:"/>
-                <TextField fx:id="delivererName"/>
-            </HBox>
-            <HBox alignment="CENTER_RIGHT" spacing="10">
-                <Label text="Enter item category:"/>
-                <ComboBox fx:id="itemCategoryComboBox" prefWidth="150"/>
-            </HBox>
-            <Button text="Search" onAction="#onSearchButtonClick"/>
+            <Label text="First name:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+            <TextField fx:id="firstName" GridPane.rowIndex="0" GridPane.columnIndex="1" prefWidth="400"/>
 
-            <TableView fx:id="delivererTableView" prefHeight="550">
-                <columns>
-                    <TableColumn text="First name" fx:id="firstNameColumn" prefWidth="150"/>
-                    <TableColumn text="Last name" fx:id="lastNameColumn" prefWidth="150"/>
-                    <TableColumn text="Contract" fx:id="contractColumn" prefWidth="150"/>
-                    <TableColumn text="Bonus" fx:id="bonusColumn" prefWidth="150"/>
-                </columns>
-            </TableView>
-        </VBox>
-    </center>
+            <Label text="Last name:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+            <TextField fx:id="lastName" GridPane.rowIndex="1" GridPane.columnIndex="1" prefWidth="400"/>
+
+            <Button text="Save" fx:id="saveChefButton" onAction="#onSaveChefClick" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+        </GridPane>
+    </left>
+
 </BorderPane>
